(05/10) - Added some images

--- a/assets/scss/globals.scss
+++ b/assets/scss/globals.scss
@@ -72,7 +72,9 @@ body {
     padding-left: 0;
     padding-right: 0;
   }
+.main-wrapper{
 
+}
   .main-container {
     display: grid;
     padding-top: 11rem;
