--- a/assets/scss/globals.css
+++ b/assets/scss/globals.css
@@ -38,40 +38,18 @@ body {
   color: var(--text-color);
 }
 
-.main {
-  margin-right: auto;
-  margin-left: auto;
-  display: flex;
-  height: 100%;
-  width: 100%;
-  max-width: 640px;
-  flex-direction: column;
-  gap: 1.25rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.background {
+  position: absolute;
+  background-color: rgba(217, 217, 217, 0.2);
+  top: 0;
+  left: 0;
 }
-
-.main-container {
-  padding-top: 7rem;
-  min-height: 100vh;
-  background-image: linear-gradient(to bottom right, #18181b, rgba(24, 24, 27, 0));
+.background .overlay {
+  position: relative;
 }
-.main-container .main-wrapper {
-  height: 100%;
-}
-
-@media (min-width: 1024px) {
-  .main {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .main-container {
-    display: grid;
-    padding-top: 11rem;
-    gap: 1.5rem;
-    grid-template-rows: 1fr 300px;
-    grid-template-columns: 1fr 640px 1fr;
-  }
+.background .gradient-pattern {
+  position: absolute;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=globals.css.map */
