--- a/assets/scss/header/header.scss
+++ b/assets/scss/header/header.scss
@@ -1,31 +1,34 @@
 .header {
-  position: fixed;
-  width: 879px;
-  height: 96px;
-  top: 0;
-  left: 0;
   background-color: #b8a5e433;
-  border-radius: 80px;
   border: 1px solid #b8a5e48c;
+  border-radius: 40px;
   backdrop-filter: blur(45px) brightness(100%);
   -webkit-backdrop-filter: blur(45px) brightness(100%);
 
+  display: flex;
+  padding: 10px 40px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+
   .navbar {
-    display: inline-flex;
-    align-items: center;
+    display: flex;
+    padding: 10px 10px;
     justify-content: center;
+    align-items: center;
+    align-content: center;
     gap: 45px;
-    position: relative;
-    top: 28px;
-    left: 85px;
+    flex-wrap: wrap;
 
     .link {
-      position: relative;
       width: fit-content;
-      font-family: "Space Grotesk-Medium", Helvetica;
+      font-family: "Space Grotesk";
       font-weight: 500;
+      text-decoration: none;
       color: #ffffff;
-      font-size: 30px;
+      font-size: 18px;
       letter-spacing: 0;
       line-height: normal;
     }
