--- a/assets/scss/projects/projects.scss
+++ b/assets/scss/projects/projects.scss
@@ -25,4 +25,57 @@
     font-weight: 400;
     line-height: normal;
   }
+
+  .contents {
+    display: flex;
+    padding: 60px 0px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 50px 40px;
+    align-self: stretch;
+    flex-wrap: wrap;
+
+    .projects {
+      display: flex;
+      padding: 60px 0px;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      gap: 50px 40px;
+      align-self: stretch;
+      flex-wrap: wrap;
+
+      .project {
+        width: 680px;
+        height: 630px;
+        border-radius: 80px;
+        border: 1px solid rgba(184, 165, 228, 0.55);
+        background: rgba(184, 165, 228, 0.2);
+        backdrop-filter: blur(22.5px);
+
+        .thumbnail {
+          width: 634.45px;
+          height: 415.981px;
+          flex-shrink: 0;
+          border-radius: 45px;
+          border: 1px solid rgba(184, 165, 228, 0.55);
+          background: rgba(184, 165, 228, 0.2);
+          backdrop-filter: blur(22.5px);
+        }
+
+        .title {
+          width: 396.368px;
+          height: 64px;
+          flex-shrink: 0;
+        }
+
+        .description {
+          width: 562.789px;
+          height: 86px;
+          flex-shrink: 0;
+        }
+      }
+    }
+  }
 }
