--- a/assets/scss/projects/projects.css
+++ b/assets/scss/projects/projects.css
@@ -30,32 +30,23 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  gap: 50px 40px;
+  gap: 10px 10px;
   align-self: stretch;
   flex-wrap: wrap;
 }
-.projects .contents .projects {
-  display: flex;
-  padding: 60px 0px;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  gap: 50px 40px;
-  align-self: stretch;
-  flex-wrap: wrap;
-}
-.projects .contents .projects .project {
-  width: 680px;
-  height: 630px;
+.projects .contents .project {
+  width: 40rem;
+  height: 400px;
   border-radius: 80px;
   border: 1px solid rgba(184, 165, 228, 0.55);
   background: rgba(184, 165, 228, 0.2);
   -webkit-backdrop-filter: blur(22.5px);
           backdrop-filter: blur(22.5px);
 }
-.projects .contents .projects .project .thumbnail {
-  width: 634.45px;
-  height: 415.981px;
+.projects .contents .project .thumbnail {
+  transform: translateY(-2rem);
+  width: auto;
+  height: 20rem;
   flex-shrink: 0;
   border-radius: 45px;
   border: 1px solid rgba(184, 165, 228, 0.55);
@@ -63,13 +54,25 @@
   -webkit-backdrop-filter: blur(22.5px);
           backdrop-filter: blur(22.5px);
 }
-.projects .contents .projects .project .title {
-  width: 396.368px;
-  height: 64px;
+.projects .contents .project .project-title {
+  padding: 2rem;
   flex-shrink: 0;
+  color: #fff;
+  font-family: Space Grotesk;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
-.projects .contents .projects .project .description {
-  width: 562.789px;
-  height: 86px;
+.projects .contents .project .project-description {
   flex-shrink: 0;
+  overflow: hidden;
+  color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-family: Space Grotesk;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }/*# sourceMappingURL=projects.css.map */
