--- a/assets/scss/globals/globals.scss
+++ b/assets/scss/globals/globals.scss
@@ -7,7 +7,7 @@ html {
   overflow-y: scroll;
   -webkit-text-size-adjust: 100%;
   tab-size: 4;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: Space Grotesk, sans-serif;
   font-feature-settings: normal;
   background: linear-gradient(180deg, #2b2065 4.06%, #702ea5 74.74%);
 
@@ -35,20 +35,71 @@ html {
     color: white;
     background: #7e22ce;
   }
+
+  body {
+    height: auto;
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+
+    main {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 150px;
+      margin: 2rem;
+    }
+  }
 }
 
-body {
-  height: auto;
-  scroll-behavior: smooth;
-  margin: 0;
-  padding: 0;
+/*
+Globals styles
+*/
+.title {
+  color: #fff;
+  text-align: center;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
 
-  main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 150px;
-    margin: 2rem;
+.description {
+  width: 320px;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.custom-button {
+  display: inline-flex;
+  gap: 10px;
+  padding: 10px 30px;
+  flex-shrink: 0;
+  border-radius: 80px;
+  border: 1px solid rgba(184, 165, 228, 0.55);
+  background: rgba(196, 196, 196, 0.2);
+  backdrop-filter: blur(22.5px);
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+
+  color: #fff;
+  text-align: center;
+  font-family: Space Grotesk;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+
+  .icon {
+    width: 10%;
   }
 }
