--- a/assets/scss/projects/projects.scss
+++ b/assets/scss/projects/projects.scss
@@ -5,84 +5,57 @@
   gap: 15px;
   align-self: stretch;
 
-  .title {
-    color: #fff;
-    text-align: center;
-    font-family: Space Grotesk;
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-
-  .description {
-    width: 320px;
-    color: #fff;
-    text-align: center;
-    font-family: Space Grotesk;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-
   .contents {
     display: flex;
-    padding: 60px 0px;
+    padding: 0;
     justify-content: center;
     align-items: center;
     align-content: center;
-    gap: 10px 10px;
+    gap: 20px 20px;
     align-self: stretch;
     flex-wrap: wrap;
+    list-style: none;
 
-    .project {
-      width: 40rem;
-      height: 400px;
-      border-radius: 80px;
+    .item {
+      width: 25rem;
+      padding: 10px 30px;
+      border-radius: 40px;
       border: 1px solid rgba(184, 165, 228, 0.55);
       background: rgba(184, 165, 228, 0.2);
       backdrop-filter: blur(22.5px);
 
       .thumbnail {
-        transform: translateY(-2rem);
-        margin: 2rem;
-        width: auto;
-        height: 20rem;
-        flex-shrink: 0;
-        border-radius: 45px;
-        border: 1px solid rgba(184, 165, 228, 0.55);
-        background: rgba(184, 165, 228, 0.2);
-        backdrop-filter: blur(22.5px);
+        width: 100%;
+        border-radius: 30px;
       }
 
-      .project-title {
-        padding: 2rem;
-        flex-shrink: 0;
-        color: #fff;
-        font-family: Space Grotesk;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-      }
+      .item-content {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
 
-      .project-description {
-        flex-shrink: 0;
-        overflow: hidden;
-        color: #fff;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        font-family: Space Grotesk;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
+        .title {
+          color: #fff;
+          font-size: 20px;
+          text-align: center;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+
+        .description {
+          width: 320px;
+          color: #fff;
+          text-align: center;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+        }
       }
     }
-  }
-
-  .see-more {
-     
   }
 }
