--- a/assets/scss/techs/techs.scss
+++ b/assets/scss/techs/techs.scss
@@ -1,6 +1,6 @@
 .techs {
   display: flex;
-  margin: 0 auto;
+  margin: auto;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -8,30 +8,11 @@
   align-self: stretch;
   max-width: max-content;
 
-  .title {
-    color: #fff;
-    text-align: center;
-    font-family: Space Grotesk;
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-
-  .description {
-    width: 320px;
-    color: #fff;
-    text-align: center;
-    font-family: Space Grotesk;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-
   .contents {
     display: flex;
-    padding: 30px 200px;
+    padding: 15px 30px;
+    margin: auto;
+    width: 70%;
     justify-content: center;
     align-items: center;
     align-content: center;
