--- a/html/assets/scss/techs/techs.css
+++ b/html/assets/scss/techs/techs.css
@@ -1,6 +1,6 @@
 .techs {
   display: flex;
-  margin: 0 auto;
+  margin: auto;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -9,28 +9,11 @@
   max-width: -moz-max-content;
   max-width: max-content;
 }
-.techs .title {
-  color: #fff;
-  text-align: center;
-  font-family: Space Grotesk;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-.techs .description {
-  width: 320px;
-  color: #fff;
-  text-align: center;
-  font-family: Space Grotesk;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
 .techs .contents {
   display: flex;
-  padding: 30px 200px;
+  padding: 15px 30px;
+  margin: auto;
+  width: 70%;
   justify-content: center;
   align-items: center;
   align-content: center;
