--- a/html/assets/scss/globals/globals.scss
+++ b/html/assets/scss/globals/globals.scss
@@ -56,6 +56,56 @@ html {
 /*
 Globals styles
 */
+.call-to-action {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  margin: auto;
+
+  border-radius: 40px;
+  border: 1px solid rgba(184, 165, 228, 0.55);
+  background: url("/html/assets/img/textures/1.png"),
+    black 10% / cover no-repeat;
+  backdrop-filter: blur(15px);
+
+  .contents {
+    display: flex;
+    padding: 60px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    align-self: stretch;
+
+    .title {
+      color: #fff;
+      text-align: center;
+      font-family: Space Grotesk;
+      font-size: 25px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+    }
+
+    .description {
+      color: #fff;
+      text-align: center;
+      font-family: Space Grotesk;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+    }
+
+    .wave {
+      width: 110px;
+      height: 10px;
+      stroke-width: 5px;
+      stroke: #fff;
+    }
+  }
+}
+
 .title {
   color: #fff;
   text-align: center;
@@ -73,6 +123,10 @@ Globals styles
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.link {
+  text-decoration: none;
 }
 
 .custom-button {
