--- a/html/assets/scss/globals/globals.css
+++ b/html/assets/scss/globals/globals.css
@@ -45,12 +45,54 @@ html body main {
   justify-content: center;
   align-items: center;
   gap: 150px;
-  margin: 2rem;
 }
 
 /*
 Globals styles
 */
+.call-to-action {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  margin: 0 80px 0 80px;
+  border-radius: 40px;
+  border: 1px solid rgba(184, 165, 228, 0.55);
+  background: url("/html/assets/img/textures/1.png");
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+.call-to-action .contents {
+  display: flex;
+  padding: 60px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  align-self: stretch;
+}
+.call-to-action .contents .title {
+  color: #fff;
+  text-align: center;
+  font-family: Space Grotesk;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.call-to-action .contents .description {
+  color: #fff;
+  text-align: center;
+  font-family: Space Grotesk;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.call-to-action .contents .wave {
+  width: 110px;
+  height: 10px;
+}
+
 .title {
   color: #fff;
   text-align: center;
@@ -68,6 +110,10 @@ Globals styles
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.link {
+  text-decoration: none;
 }
 
 .custom-button {
