--- a/html/assets/scss/header/header.css
+++ b/html/assets/scss/header/header.css
@@ -5,6 +5,7 @@
   backdrop-filter: blur(45px) brightness(100%);
   -webkit-backdrop-filter: blur(45px) brightness(100%);
   display: flex;
+  margin-top: 20px;
   padding: 10px 40px;
   justify-content: center;
   align-items: center;
