--- a/html/assets/scss/common/globals/fonts/fonts.css
+++ b/html/assets/scss/common/globals/fonts/fonts.css
@@ -1,34 +1,30 @@
 @font-face {
   font-family: "Space Grotesk";
-  src: url("../../../fonts/SpaceGrotesk-Light.ttf") format("truetype");
+  src: url("../../../../fonts/SpaceGrotesk-Light.ttf") format("truetype");
   font-style: normal;
   font-weight: 300;
 }
-
 @font-face {
   font-family: "Space Grotesk";
-  src: url("../../../fonts/SpaceGrotesk-Regular.ttf") format("truetype");
+  src: url("../../../../fonts/SpaceGrotesk-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
-
 @font-face {
   font-family: "Space Grotesk";
-  src: url("../../../fonts/SpaceGrotesk-Medium.ttf") format("truetype");
+  src: url("../../../../fonts/SpaceGrotesk-Medium.ttf") format("truetype");
   font-style: normal;
   font-weight: 500;
 }
-
 @font-face {
   font-family: "Space Grotesk";
-  src: url("../../../fonts/SpaceGrotesk-SemiBold.ttf") format("truetype");
+  src: url("../../../../fonts/SpaceGrotesk-SemiBold.ttf") format("truetype");
   font-style: normal;
   font-weight: 600;
 }
-
 @font-face {
   font-family: "Space Grotesk";
-  src: url("../../../fonts/SpaceGrotesk-Bold.ttf") format("truetype");
+  src: url("../../../../fonts/SpaceGrotesk-Bold.ttf") format("truetype");
   font-style: normal;
   font-weight: 700;
-}
+}/*# sourceMappingURL=fonts.css.map */
